--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
  <head>
  <title>My First Web App</title>
@@ -8,6 +7,7 @@
  <body>
  <h1>Hello, World!</h1>
  <p>This is a paragraph.</p>
+<img src="img_girl.jpeg" alt="Girl in a jacket"
+width="500" height="600">
  </body>
 </html>
- 
