--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <body>
  <h1>Hello, World!</h1>
  <p>This is a paragraph.</p>
-<img src="img_girl.jpeg" alt="Girl in a jacket"
+<img src="img.png" alt="AI fig"
 width="500" height="600">
  </body>
 </html>
