--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-
 <!DOCTYPE html>
+
+
+
 <html>
  <head>
  <title>My First Web App</title>
@@ -9,5 +11,8 @@
  <body>
  <h1>Hello, World!</h1>
  <p>This is a paragraph.</p>
+<img src="img_girl.jpeg" alt="Girl in a jacket"
+width="500" height="600">
  </body>
 </html>
+
