--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <body>
  <h1>Hello, World!</h1>
  <p>This is a paragraph.</p>
-<img src="img.png" alt="Girl in a jacket"
+<img src="img.jpeg" alt="img"
 width="500" height="600">
  </body>
 </html>
