--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
  <body>
  <h1>Hello, World!</h1>
  <p>This is a paragraph.</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0wGBpgIrd9M?si=4_pgUIxTyTXvjMyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  
-<img src="img.jpg" alt="img"
-width="500" height="600">
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/0wGBpgIrd9M?si=4_pgUIxTyTXvjMyI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   
+ <img src="img.jpg" alt="img"width="500" height="600">
  </body>
 </html>
 
